# translator

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE.TXT  Makefile  Makefile.llvm.rules  README.md  build.sh  stack_experiment.patch
autoconf/: configure.ac
cmake/: .string_to_list.cmake.swp  add_global_flag.cmake  c_flags_override.cmake  compiler_warnings.cmake  cxx_flags_override.cmake  find_llvm.cmake  inception_add_component.cmake  inception_component_add_cxx_flag.cmake  string_to_list.cmake
include/CodeInv/: Decompiler.h  Disassembler.h  FractureMemoryObject.h  FractureSymbol.h  InvISelDAG.h  MCDirector.h  StrippedDisassembler.h  SymbolsTable.h
include/Commands/: Commands.h
include/Config/: CompileTimeInfo.h.cmin  config.h.cmin
include/Transforms/: BreakConstantGEP.h  BreakConstantPtrToInt.h  NameRecovery.h  TypeRecovery.h
include/Utils/: ABIAdapter.h  Builder.h  ErrorHandling.h  IContext.h
lib/: CMakeLists.txt  Makefile
lib/CodeInv/: CMakeLists.txt  Decompiler.cpp  Disassembler.cpp  IREmitter.cpp  InvISelDAG.cpp  MCDirector.cpp  StrippedDisassembler.cpp
lib/Transforms/: CMakeLists.txt  Makefile
lib/Transforms/BreakConstantGEP/: BreakConstantGEP.cpp  Makefile
lib/Transforms/BreakConstantGEP/Release+Debug+Asserts/: BreakConstantGEP.d
lib/Transforms/BreakConstantPtrToInt/: BreakConstantPtrToInt.cpp  Makefile
lib/Transforms/BreakConstantPtrToInt/Release+Debug+Asserts/: .dir  BreakConstantPtrToInt.d
lib/Transforms/NameRecovery/: Makefile  NameRecovery.cpp
lib/Transforms/NameRecovery/Release+Debug+Asserts/: NameRecovery.d
lib/Transforms/TypeRecovery/: TypeRecovery.cpp
lib/Transforms/TypeRecovery/Release+Debug+Asserts/: TypeRecovery.d
lib/Utils/: ABIAdapter.cpp  Builder.cpp  CMakeLists.txt  ErrorHandling.cpp  IContext.cpp  Makefile  utils.cpp
tools/: CMakeLists.txt  Makefile
tools/fracture-autodis/: Makefile
tools/fracture-cl/: Makefile  fracture-cl.cpp
tools/inception-cl/: AssemblySupport.h  BinFun.h  CMakeLists.txt  CollisionSolver.h  FunctionCleaner.h  FunctionsHelperWriter.cpp  FunctionsHelperWriter.h  IRMerger.cpp  IRMerger.h  InterruptSupport.h  Makefile  SectionsWriter.h  StackAllocator.h  inception-cl.cpp
tools/mkAllInsts/: mkAllInsts.cpp
